layout bugs fixed

--- a/orcamento/style.css
+++ b/orcamento/style.css
@@ -5,7 +5,6 @@
         padding: 0;
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 15px;
         font-weight: bold;
         color: rgb(87, 58, 33);
         background-color: #c8b68b;
@@ -15,6 +14,7 @@
         flex-flow: row wrap;
         padding: 10px;
         justify-content: center;
+        font-size: 20px;
         /* max-width: 800px; */
     }
     .preco{
@@ -140,6 +140,7 @@
         /* border: 1px solid; */
         margin-left: auto;
         margin-right: auto;
+        font-size: 18px;
     }
 }
 
@@ -166,7 +167,7 @@
         height: 0px;
     }
     table{
-        font-size: 13px;
+        font-size: 12px;
     }
     button{
         display: none;
